Update style.css trying to sort out hero image stretch issue on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5 {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative; 
-  
+  -o-object-fit: contain;
   /* position: fixed;
   top: 0;
   left: 0; */
@@ -94,10 +94,5 @@ section.container {
 .no-bottom-border {
   border-bottom: none !important;
 };
-@media screen and(max-width:800px) {
-  .hero:background {
-    attachment: scroll;
-  }
-}
-    
+
         
